# BuGLEs

./: .gitignore  3ds.cpp  3ds.h  API.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MeshManager.cpp  PLUGINS_API.md  README.md  SPONSORS.md  imgui.ini  load3ds.js  matrix.js  mingw-w32.cmake  mingw-w64.cmake
assets/md2/: pknight_weapon.md2
assets/shaders/: csm_scene_v3.frag  csm_scene_v3.vert  depth.frag  depth.vert  hotreload.frag  hotreload.vert  shadowmap_scene.frag  shadowmap_scene.vert  shadowmap_scene_v2.frag  shadowmap_scene_v2.vert  sky_proc.frag  sky_proc.vert  water.fs  water.ps  water_ps.glsl  water_vs.glsl
cmake/: use_prebuilt_vendors.cmake
config/: settings.json
editor/: CMakeLists.txt
editor/src/: EditorTab.h  EmbeddedVM.cpp  GifRecorder.cpp  LanguageDefinitions.cpp  SnippetManager.h  TextEditor.cpp  TextEditor.h  main.cpp  rlImGui.cpp
exporter/: CMakeLists.txt
gameeditor/: CMakeLists.txt
gameeditor/src/: DocumentSymbols.cpp  DocumentSymbols.h  EmbeddedVM.cpp  EmbeddedVM.h  GifRecorder.h  ImGuiDebugPanel.cpp  ImGuiFileDialog.cpp  ImGuiFontAwesome.h  main.cpp  rlImGui.cpp
libbu/include/: compiler.hpp  interpreter.hpp
libbu/src/: compiler.cpp  compiler_expressions.cpp  compiler_statements.cpp  debug.cpp  interpreter.cpp  interpreter_runtime_goto.cpp  interpreter_runtime_switch.cpp  pool.cpp
main/: CMakeLists.txt
main/src/: audio_bindings.cpp  binaryStream.cpp  binaryStream.hpp  bindings.cpp  bindings.hpp  bindings_context.cpp  bindings_internal.hpp  core.cpp  device.cpp  device.hpp  device_input_bindings.cpp  ease.cpp  filebuffer.cpp  gl_headers.h  imgui_bindings.cpp  imopengl.cpp  main.cpp  msf_gif.cpp  opengl_advanced.cpp  opengl_compute.cpp  opengl_instancing.cpp  opengl_legacy.cpp  opengl_query.cpp  opengl_rendertarget.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_transform_feedback.cpp  opengl_ubo.cpp  opengl_utils.hpp  opengl_vertexbuffer.cpp  pch.h  poly2tri_binding.cpp  raymath.cpp  rlImGui.cpp  rlImGui.h  shape_bindings.cpp  stb_bindings.cpp  stb_impl.cpp  stb_rect_pack.cpp  stb_truetype.cpp  (+7 more)
main/src/assimp/: assimp_animation.cpp  assimp_bindings.cpp  assimp_bindings.hpp  assimp_core.cpp  assimp_core.hpp  assimp_material.cpp  assimp_mesh.cpp  assimp_node.cpp  assimp_scene.cpp
main/src/box2d/: b2_user_settings.h  bindings.hpp  box2d.cpp  box2d_joints.cpp  box2d_joints.hpp
main/src/jolt/: bindings.hpp  jolt_bindings.cpp  jolt_body.cpp  jolt_core.cpp  jolt_core.hpp  jolt_debug.cpp  jolt_joints.cpp  jolt_joints.hpp  jolt_vehicle.cpp  jolt_vehicle.hpp  jolt_world.cpp
main/src/meshopt/: bindings.hpp  meshopt_bindings.cpp
main/src/micropather/: bindings.hpp  micropather_bindings.cpp  micropather_core.cpp  micropather_core.hpp  micropather_grid.cpp
main/src/opensteer/: bindings.hpp  opensteer_agent.cpp  opensteer_bindings.cpp  opensteer_core.cpp  opensteer_core.hpp  opensteer_obstacle.cpp  opensteer_pathway.cpp  opensteer_stubs.cpp
main/src/ray/: camera.cpp  core.cpp  models.cpp  rlgl.cpp  shapes.cpp  structs.cpp  text.cpp  textures.cpp
main/src/recast/: recast_bindings.cpp  recast_bindings.hpp  recast_core.cpp  recast_core.hpp  recast_crowd.cpp  recast_navmesh.cpp  recast_tilecache.cpp
scripts/: test_3d_meshes.bu  test_box2d.bu  test_camera2d.bu  test_colors.bu  test_draw_textures.bu  test_image.bu  test_imgui.bu  test_input_extra.bu  test_jolt_debug.bu  test_opengl.bu  test_rlgl.bu  test_texture_poly.bu  test_window.bu  test_window_state.bu
scripts/demos/: demo_3ds_model.bu  demo_3ds_showroom.bu  demo_anisotropic_lab.bu  demo_assimp_animation.bu  demo_b3d_model.bu  demo_bsp_map.bu  demo_carpaint_showroom.bu  demo_dynamic_reflection_carpaint.bu  demo_env_probe_lab.bu  demo_geo_terrain.bu  demo_godray_lab.bu  demo_godray_powerplant.bu  demo_godray_shadow_sponza.bu  demo_godray_sponza.bu  demo_iqm_model.bu  demo_iqm_shader_animator.bu  demo_iqm_trimesh_collision.bu  demo_md2_dump.bu  demo_md2_model.bu  demo_md3_model.bu  demo_md3_player.bu  demo_meshbin_cs_sponza.bu  demo_meshbin_factory.bu  demo_meshbin_factory_collision.bu  demo_meshbin_sinbad_anim.bu  demo_meshbin_sponza.bu  demo_meshbin_sponza_deferred_gbuffer.bu  demo_meshbin_sponza_forward_lights.bu  demo_meshbin_sponza_tiled_deferred.bu  demo_mini3d_md2.bu  demo_mini3d_primitives.bu  demo_normalmap_baker_lab.bu  demo_normalmap_sponza.bu  demo_normalmap_ssao_sponza.bu  demo_pbr_lab.bu  demo_planar_reflection_lab.bu  demo_point_shadow_godray_sponza.bu  demo_point_shadow_lab.bu  demo_point_shadow_sponza.bu  demo_reflection_combo_lab.bu  (+8 more)
scripts/depracated/: buffer_tutorial.bu  demo_assimp.bu  demo_b3d_collide.bu  demo_b3d_collide_tree.bu  demo_b3d_collision.bu  demo_b3d_legacy.bu  demo_bsp_lagacy.bu  demo_bsp_lagacy_view.bu  demo_heightfield_volcano.bu  demo_iqm_legacy.bu  demo_jolt_trimesh.bu  demo_md2_legacy.bu  demo_md3_legacy.bu  demo_md3_legacy_model.bu  demo_ode_trimesh.bu  demo_terrain.bu  demo_tiled_terrain.bu  demo_water_legacy.bu  demo_water_legacy_arrays.bu  imgui.ini  main.bu  tutorial_01_hello_triangle.bu  tutorial_02_shapes_2d.bu  tutorial_03_3d_scene.bu  tutorial_04_textures.bu  tutorial_05_shaders.bu  tutorial_06_phong_lighting.bu  tutorial_07_fbo_postprocess.bu
scripts/libs/: lib_3ds.bu  lib_animation.bu  lib_b3d.bu  lib_camera_fps.bu  lib_camera_free.bu  lib_camera_orbit.bu  lib_coldet.bu  lib_collision.bu  lib_frustum.bu  lib_geo_terrain.bu  lib_heightfield.bu  lib_image_normalmap.bu  lib_iqm.bu  lib_md2.bu  lib_md3.bu  lib_meshanim.bu  lib_meshbin.bu  lib_mini3d.bu  lib_mini3d_md2.bu  lib_q3bsp.bu  lib_tiled_terrain.bu  lib_tri_primitives.bu  lib_trimesh.bu  lib_trimesh_octree.bu  lib_xmesh.bu
scripts/references/: ref_camera_shader_matrices.bu
scripts/tests/: benchmark_hotspots.bu  benchmark_hotspots.py  test_generate_normalmap.bu  test_multi_return_forward.bu  test_multi_return_unpack_repack.bu  tmp_3ds_headless.bu  tmp_check_nm.bu  tmp_check_nm_small.bu
scripts/tutorials/: 01_hello_triangle.bu  04_instancing.bu  (+4 more)
tests/: CMakeLists.txt
tools/: build_vendor_libs.sh  package_release.sh  package_release_win64.sh  release.sh
(+3 files in other folders)
